changed background image location to to hero container in order to fix clipping issue.
The .heroimage container was clipping the background image, so I moved
it to the parent container.

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -133,15 +133,14 @@ a{
 }
 
 /** Hero  **/
-.heroimage{
-	@include col(2/5);
-	position: fixed;
-	z-index: 1;
-	overflow: auto;
 
+
+.hero-container{
+	background-image: url('../images/imac.png');
+	background-repeat: no-repeat;
+	background-position: 100%;
+	background-size: 37%;
 }
-
-
 
 .hero {
 	margin: auto;
